--- a/index.css
+++ b/index.css
@@ -1,8 +1,70 @@
 /*https://www.magicpattern.design/tools/css-backgrounds*/
 /*Background на каждую страницу*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+/*font-family: 'Montserrat', sans-serif;*/
+/*font-family: 'Lato', sans-serif;*/
+/*font-family: 'Pacifico', cursive;*/
 body {
     background-color: #e5e5f7;
     opacity: 0.8;
     background-image: radial-gradient(#444cf7 1.3px, #e5e5f7 1.3px);
     background-size: 36px 36px;
+}
+
+.btn-main {
+    display: inline-block;
+    box-sizing: border-box;
+    user-select: none;
+    -webkit-user-select: none;
+    font-weight: 600;
+    font-size: 1.5rem;
+    font-family: 'Lato', sans-serif;
+    line-height: 1.5;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -moz-user-select: none;
+    background-color: transparent;
+    border: 4px solid transparent;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.5rem;
+    position: relative;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-random {
+    background-color: #FFCFD2;
+    border-color: #FFCFD2;
+}
+
+.btn-picker {
+    background-color: #8EECF5;
+    border-color: #8EECF5;
+}
+
+.btn-gradient{
+    background-color: #CFBAF0;
+    border-color: #CFBAF0;
+}
+
+.btn-random:hover{
+    background-color: #fcbbbf;
+    border-color: #fcbbbf;
+    box-shadow: 0 0 0 0.5rem rgba(232, 165, 169,.5);
+}
+
+.btn-picker:hover{
+    background-color: #81e6f0;
+    border-color: #81e6f0;
+    box-shadow: 0 0 0 0.5rem rgba(122, 229, 240,.5);
+}
+
+.btn-gradient:hover{
+    background-color: #c6aaf2;
+    border-color: #c6aaf2;
+    box-shadow: 0 0 0 0.5rem rgba(181, 152, 227,.5);
 }
