--- a/index.css
+++ b/index.css
@@ -6,6 +6,24 @@
 /*font-family: 'Montserrat', sans-serif;*/
 /*font-family: 'Lato', sans-serif;*/
 /*font-family: 'Pacifico', cursive;*/
+:root{
+    /* COLORS */
+    --first-color: #FFCFD2;
+    --sub-first-color: #fcbbbf;
+
+    --second-color: #8EECF5;
+    --sub-second-color: #81e6f0;
+
+    --third-color: #CFBAF0;
+    --sub-third-color: #c6aaf2;
+
+    --text-color: black;
+
+    /* TYPOGRAPH */
+    --title-font:'Pacifico', cursive;
+    --h-font: 'Montserrat', sans-serif ;
+    --p-font: 'Lato', sans-serif;
+}
 body {
     background-color: #e5e5f7;
     opacity: 0.8;
@@ -15,8 +33,8 @@ body {
 
 #title{
     font-size: 3rem;
-    font-family: 'Pacifico',cursive;
-    color: black;
+    font-family: var(--title-font);
+    color: var(--text-color);
     border-bottom: 4px solid black;
 }
 .hidden{
@@ -39,7 +57,7 @@ body {
     cursor: pointer;
     -moz-user-select: none;
     background-color: transparent;
-    border: 4px solid transparent;
+    border: 4px solid var(--text-color);
     padding: 0.375rem 0.75rem;
     border-radius: 0.5rem;
     position: relative;
@@ -47,34 +65,34 @@ body {
 }
 
 .btn-random {
-    background-color: #FFCFD2;
-    border-color: #FFCFD2;
+    background-color: var(--first-color);
+    border-color: var(--first-color);;
 }
 
 .btn-picker {
-    background-color: #8EECF5;
-    border-color: #8EECF5;
+    background-color: var(--second-color);;
+    border-color: var(--second-color);;
 }
 
 .btn-gradient{
-    background-color: #CFBAF0;
-    border-color: #CFBAF0;
+    background-color: var(--third-color);
+    border-color: var(--third-color);
 }
 
 .btn-random:hover{
-    background-color: #fcbbbf;
-    border-color: #fcbbbf;
+    background-color: var(--sub-first-color);
+    border-color: var(--sub-first-color);
     box-shadow: 0 0 0 0.5rem rgba(232, 165, 169,.5);
 }
 
 .btn-picker:hover{
-    background-color: #81e6f0;
-    border-color: #81e6f0;
+    background-color: var(--sub-second-color);
+    border-color: var(--sub-second-color);
     box-shadow: 0 0 0 0.5rem rgba(122, 229, 240,.5);
 }
 
 .btn-gradient:hover{
-    background-color: #c6aaf2;
-    border-color: #c6aaf2;
+    background-color: var(--sub-third-color);
+    border-color: var(--sub-third-color);
     box-shadow: 0 0 0 0.5rem rgba(181, 152, 227,.5);
 }
