--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@ body {
     font-family: var(--title-font);
     color: var(--text-color);
     border-bottom: 4px solid black;
+    border-radius: 8px;
 }
 .hidden{
     visibility: hidden;
