Конец Random Color
Страница Random Color теперь работает

--- a/index.css
+++ b/index.css
@@ -24,6 +24,18 @@
     --h-font: 'Montserrat', sans-serif ;
     --p-font: 'Lato', sans-serif;
 }
+
+.random {
+    color: var(--first-color);
+}
+.picker {
+    color: var(--second-color);
+}
+
+.gradient {
+    color: var(--third-color);
+}
+
 body {
     background-color: #e5e5f7;
     opacity: 0.8;
