--- a/index.css
+++ b/index.css
@@ -24,6 +24,12 @@
     --h-font: 'Montserrat', sans-serif ;
     --p-font: 'Lato', sans-serif;
 }
+.navbar-brand{
+    font-family: var(--title-font);
+}
+.nav-link{
+    font-family: var(--h-font);
+}
 
 .random {
     color: var(--first-color);
@@ -52,6 +58,18 @@ body {
 }
 .hidden{
     visibility: hidden;
+}
+
+
+.btn-change {
+    letter-spacing: 2px;
+}
+
+.btn-change:hover {
+    background-color: #121212;
+    border-color: #121212;
+    box-shadow: 0 0 0 0.5rem rgba(10, 10, 10, .5);
+    color: #ffffff;
 }
 
 .btn-main {
